# boosting

./: .gitignore  CMakeLists.txt  Concurrency.cpp  Concurrency.h  Config.cpp  Config.h  DataSet.cpp  DataSet.h  Gbm.cpp  Gbm.h  GbmFun.h  LogisticFun.h  Makefile  README.md  Train.cpp  Tree.h  TreeRegressor.cpp  TreeRegressor.h  boosting.sh  readme~
include/: Concurrency.h  DataSet.h  GbmFun.h  TreeRegressor.h
src/: Config.cpp  DataSet.cpp  Gbm.cpp  Train.cpp  TreeRegressor.cpp
